fixed span not showing up for #cofirm-pwd label

--- a/styles.css
+++ b/styles.css
@@ -20,17 +20,20 @@
 .container {
   display: flex;
   justify-content: space-between;
-  height: 100vh;
+  max-height: 50%;
 }
 
 .side-container {
-  width: 5%;
+  max-width: 5%;
   background-color: black;
 }
 
 .form-container {
   width: 65%;
   background-color: rgb(244, 239, 239);
+  flex-grow: 3;
+  min-height: 30vh;
+  flex-shrink: 1;
 }
 
 .img-container {
@@ -52,9 +55,11 @@
 
 }
 
-
 .button-container {
-  height: 29%;
+  max-height: 29vh;
+  display: flex;
+  flex-flow: wrap column;
+  align-items: flex-start;
 }
 
 .sign-up-form {
@@ -73,7 +78,7 @@ strong {
 }
 
 .form-intro {
-  height: 35%;
+  max-height: 35%;
   display: flex;
   flex-flow: column;
   justify-content: flex-end;
@@ -89,7 +94,6 @@ p {
   box-shadow: 0px 0px 5px darkgray;
   margin-bottom: 3px;
   padding-right: 20%;
-  
 }
 
 button {
@@ -105,6 +109,7 @@ button {
 .button-container {
   padding-left: 35px;
   padding-top: 30px;
+  width: 100%;
 }
 
 a {
@@ -127,10 +132,6 @@ legend {
   width: 100%;
 }
 
-label,
-input {
-}
-
 input {
   border-radius: 3px;
   border: rgb(207, 207, 207) 1px solid;
@@ -150,8 +151,6 @@ input:valid {
 input:invalid {
   border: var(--error-box-color) 2px solid;
 }
-
-
 
 ul {
   list-style: none;
@@ -179,7 +178,7 @@ input + span {
   position: relative;
 }
 
-input:required + span::after   {
+input:required + span::after {
   position: absolute;
   /* content: url(./img/warning.png);
  */
@@ -189,8 +188,5 @@ input:required + span::after   {
  right: -25px;
  padding-left: 1px;
  padding-right: 1px;
-
-
-
 }
 
